--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-jwt.secret=${JWT_SECRET}
-jwt.expirationMs=86400000
-jwt.expirationRefreshMs=604800000
+application.security.jwt.secret-key=${JWT_SECRET}
+application.security.jwt.access-expiration=${JWT_ACCESS_EXPIRATION_MS}
+application.security.jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION_MS}
 
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
@@ -28,3 +28,5 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+application.security.otp.expiration-minutes=${OTP_EXPIRATION_MINUTES}
